--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-helmet": "^6.1.0",
     "react-share": "^4.3.1",
     "react-twitter-widgets": "^1.9.5",
-    "url-join": "^4.0.0"
+    "url-join": "^4.0.0",
+    "dotenv": "latest"
   },
   "devDependencies": {
     "cli-glob": "^0.1.0",
