--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "2.20.11",
   "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
   "dependencies": {
+    "dotenv": "latest",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.5.0",
     "gatsby-plugin-catch-links": "^2.4.0",
@@ -24,7 +25,7 @@
     "gatsby-remark-prismjs": "^3.7.0",
     "gatsby-remark-relative-images": "^2.0.2",
     "gatsby-remark-responsive-iframe": "^2.5.0",
-    "gatsby-source-filesystem": "^2.5.0",
+    "gatsby-source-filesystem": "^2.11.1",
     "gatsby-transformer-remark": "^2.10.0",
     "gatsby-transformer-sharp": "^2.6.0",
     "lodash": "^4.17.20",
@@ -37,8 +38,7 @@
     "react-helmet": "^6.1.0",
     "react-share": "^4.3.1",
     "react-twitter-widgets": "^1.9.5",
-    "url-join": "^4.0.0",
-    "dotenv": "latest"
+    "url-join": "^4.0.0"
   },
   "devDependencies": {
     "cli-glob": "^0.1.0",
